updated index page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <li>onclick: is an event that occurs when the user clicks something on the page</li>
         </ul>
     </p>
-    <p>You may be wondering why a Dino lodging site is trying to tell you about JavaScript. Good questions. The universe is a complex place, and one can't really know. Just go with it. Sometimes there is no rhyme or reason to what we do. Humans are silly, and we are doing our best. Have a great day!</p>
+    <p>You may be wondering why a Dino lodging site is trying to tell you about JavaScript. Good question. The universe is a complex place, and one can't really know. Just go with it. Sometimes there is no rhyme or reason to what we do. Humans are silly, and we are doing our best. Have a great day!</p>
 </Section>
     </main>
     <footer>
